tests/snapshots/codegen__.__test__constexpr.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ enum { ten=1+2+3+4 }; ten; }) => 10\n({ int i=0; switch(3) { case 5-2+0*3: i++; } i; }) => 1\n({ int x[1+1]; sizeof(x); }) => 8\n({ char x[8-2]; sizeof(x); }) => 6\n({ char x[2*3]; sizeof(x); }) => 6\n({ char x[12/4]; sizeof(x); }) => 3\n({ char x[12%10]; sizeof(x); }) => 2\n({ char x[0b110&0b101]; sizeof(x); }) => 4\n({ char x[0b110|0b101]; sizeof(x); }) => 7\n({ char x[0b111^0b001]; sizeof(x); }) => 6\n({ char x[1<<2]; sizeof(x); }) => 4\n({ char x[4>>1]; sizeof(x); }) => 2\n({ char x[(1==1)+1]; sizeof(x); }) => 2\n({ char x[(1!=1)+1]; sizeof(x); }) => 1\n({ char x[(1<1)+1]; sizeof(x); }) => 1\n({ char x[(1<=1)+1]; sizeof(x); }) => 2\n({ char x[1?2:3]; sizeof(x); }) => 2\n({ char x[0?2:3]; sizeof(x); }) => 3\n({ char x[(1,3)]; sizeof(x); }) => 3\n({ char x[!0+1]; sizeof(x); }) => 2\n({ char x[!1+1]; sizeof(x); }) => 1\n({ char x[~-3]; sizeof(x); }) => 2\n({ char x[(5||6)+1]; sizeof(x); }) => 2\n({ char x[(0||0)+1]; sizeof(x); }) => 1\n({ char x[(1&&1)+1]; sizeof(x); }) => 2\n({ char x[(1&&0)+1]; sizeof(x); }) => 1\n({ char x[(int)3]; sizeof(x); }) => 3\n({ char x[(char)0xffffff0f]; sizeof(x); }) => 15\n({ char x[(short)0xffff010f]; sizeof(x); }) => 271\n({ char x[(int)0xfffffffffff+5]; sizeof(x); }) => 4\n({ char x[(int*)0+2]; sizeof(x); }) => 8\n({ char x[(int*)16-1]; sizeof(x); }) => 12\n({ char x[(int*)16-(int*)4]; sizeof(x); }) => 3\n({ char x[(-1>>31)+5]; sizeof(x); }) => 4\n({ char x[(unsigned char)0xffffffff]; sizeof(x); }) => 255\n({ char x[(unsigned short)0xffff800f]; sizeof(x); }) => 32783\n({ char x[(unsigned int)0xfffffffffff>>31]; sizeof(x); }) => 1\n({ char x[(long)-1/((long)1<<62)+1]; sizeof(x); }) => 1\n({ char x[(unsigned long)-1/((long)1<<62)+1]; sizeof(x); }) => 4\n({ char x[(unsigned)1<-1]; sizeof(x); }) => 1\n({ char x[(unsigned)1<=-1]; sizeof(x); }) => 1\ng40==1.5 => 1\ng41==11 => 1\nOK\n"
status: 0
