tests/snapshots/codegen__.__test__control.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ int x; if (0) x=2; else x=3; x; }) => 3\n({ int x; if (1-1) x=2; else x=3; x; }) => 3\n({ int x; if (1) x=2; else x=3; x; }) => 2\n({ int x; if (2-1) x=2; else x=3; x; }) => 2\n({ int i=0; int j=0; for (i=0; i<=10; i=i+1) j=i+j; j; }) => 55\n({ int i=0; while(i<10) i=i+1; i; }) => 10\n({ 1; {2;} 3; }) => 3\n({ ;;; 5; }) => 5\n({ int i=0; while(i<10) i=i+1; i; }) => 10\n({ int i=0; int j=0; while(i<=10) {j=i+j; i=i+1;} j; }) => 55\n(1,2,3) => 3\n({ int i=2, j=3; (i=5,j)=6; i; }) => 5\n({ int i=2, j=3; (i=5,j)=6; j; }) => 6\n({ int j=0; for (int i=0; i<=10; i=i+1) j=j+i; j; }) => 55\n({ int i=3; int j=0; for (int i=0; i<=10; i=i+1) j=j+i; i; }) => 3\n0||1 => 1\n0||(2-2)||5 => 1\n0||0 => 0\n0||(2-2) => 0\n0&&1 => 0\n(2-2)&&5 => 0\n1&&5 => 1\n({ int i=0; goto a; a: i++; b: i++; c: i++; i; }) => 3\n({ int i=0; goto e; d: i++; e: i++; f: i++; i; }) => 2\n({ int i=0; goto i; g: i++; h: i++; i: i++; i; }) => 1\n({ typedef int foo; goto foo; foo:; 1; }) => 1\n({ int i=0; for(;i<10;i++) { if (i == 3) break; } i; }) => 3\n({ int i=0; while (1) { if (i++ == 3) break; } i; }) => 4\n({ int i=0; for(;i<10;i++) { for (;;) break; if (i == 3) break; } i; }) => 3\n({ int i=0; while (1) { while(1) break; if (i++ == 3) break; } i; }) => 4\n({ int i=0; int j=0; for (;i<10;i++) { if (i>5) continue; j++; } i; }) => 10\n({ int i=0; int j=0; for (;i<10;i++) { if (i>5) continue; j++; } j; }) => 6\n({ int i=0; int j=0; for(;!i;) { for (;j!=10;j++) continue; break; } j; }) => 10\n({ int i=0; int j=0; while (i++<10) { if (i>5) continue; j++; } i; }) => 11\n({ int i=0; int j=0; while (i++<10) { if (i>5) continue; j++; } j; }) => 5\n({ int i=0; int j=0; while(!i) { while (j++!=10) continue; break; } j; }) => 11\n({ int i=0; switch(0) { case 0:i=5;break; case 1:i=6;break; case 2:i=7;break; } i; }) => 5\n({ int i=0; switch(1) { case 0:i=5;break; case 1:i=6;break; case 2:i=7;break; } i; }) => 6\n({ int i=0; switch(2) { case 0:i=5;break; case 1:i=6;break; case 2:i=7;break; } i; }) => 7\n({ int i=0; switch(3) { case 0:i=5;break; case 1:i=6;break; case 2:i=7;break; } i; }) => 0\n({ int i=0; switch(0) { case 0:i=5;break; default:i=7; } i; }) => 5\n({ int i=0; switch(1) { case 0:i=5;break; default:i=7; } i; }) => 7\n({ int i=0; switch(1) { case 0: 0; case 1: 0; case 2: 0; i=2; } i; }) => 2\n({ int i=0; switch(3) { case 0: 0; case 1: 0; case 2: 0; i=2; } i; }) => 0\n({ int i=0; switch(-1) { case 0xffffffff: i=3; break; } i; }) => 3\n({ int i=0; int j=0; do { j++; } while (i++ < 6); j; }) => 7\n({ int i=0; int j=0; int k=0; do { if (++j > 3) break; continue; k++; } while (1); j; }) => 4\n0.0 && 0.0 => 0\n0.0 && 0.1 => 0\n0.3 && 0.0 => 0\n0.3 && 0.5 => 1\n0.0 || 0.0 => 0\n0.0 || 0.1 => 1\n0.3 || 0.0 => 1\n0.3 || 0.5 => 1\n({ int x; if (0.0) x=3; else x=5; x; }) => 5\n({ int x; if (0.1) x=3; else x=5; x; }) => 3\n({ int x=5; if (0.0) x=3; x; }) => 5\n({ int x=5; if (0.1) x=3; x; }) => 3\n({ double i=10.0; int j=0; for (; i; i--, j++); j; }) => 10\n({ double i=10.0; int j=0; do j++; while(--i); j; }) => 10\n({ int i=0; switch(7) { case 0 ... 5: i=1; break; case 6 ... 20: i=2; break; } i; }) => 2\n({ int i=0; switch(7) { case 0 ... 7: i=1; break; case 8 ... 10: i=2; break; } i; }) => 1\n({ int i=0; switch(7) { case 0: i=1; break; case 7 ... 7: i=1; break; } i; }) => 1\n({ void *p = &&v11; int i=0; goto *p; v11:i++; v12:i++; v13:i++; i; }) => 3\n({ void *p = &&v22; int i=0; goto *p; v21:i++; v22:i++; v23:i++; i; }) => 2\n({ void *p = &&v33; int i=0; goto *p; v31:i++; v32:i++; v33:i++; i; }) => 1\nOK\n"
status: 0
