tests/snapshots/codegen__.__test__defined.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "m => 3\nm => 3\nm => 4\nm => 4\nOK\n"
status: 0
