tests/snapshots/codegen__.__test__extern.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "ext1 => 5\n*ext2 => 5\nOK\n"
status: 0
