tests/snapshots/codegen__.__test__float.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "(float)(char)35 => 35\n(float)(short)35 => 35\n(float)(int)35 => 35\n(float)(long)35 => 35\n(float)(unsigned char)35 => 35\n(float)(unsigned short)35 => 35\n(float)(unsigned int)35 => 35\n(float)(unsigned long)35 => 35\n(double)(char)35 => 35\n(double)(short)35 => 35\n(double)(int)35 => 35\n(double)(long)35 => 35\n(double)(unsigned char)35 => 35\n(double)(unsigned short)35 => 35\n(double)(unsigned int)35 => 35\n(double)(unsigned long)35 => 35\n(char)(float)35 => 35\n(short)(float)35 => 35\n(int)(float)35 => 35\n(long)(float)35 => 35\n(unsigned char)(float)35 => 35\n(unsigned short)(float)35 => 35\n(unsigned int)(float)35 => 35\n(unsigned long)(float)35 => 35\n(char)(double)35 => 35\n(short)(double)35 => 35\n(int)(double)35 => 35\n(long)(double)35 => 35\n(unsigned char)(double)35 => 35\n(unsigned short)(double)35 => 35\n(unsigned int)(double)35 => 35\n(unsigned long)(double)35 => 35\n(double)(unsigned long)(long)-1 => -2147483648\n2e3==2e3 => 1\n2e3==2e5 => 0\n2.0==2 => 1\n5.1<5 => 0\n5.0<5 => 0\n4.9<5 => 1\n5.1<=5 => 0\n5.0<=5 => 1\n4.9<=5 => 1\n2e3f==2e3 => 1\n2e3f==2e5 => 0\n2.0f==2 => 1\n5.1f<5 => 0\n5.0f<5 => 0\n4.9f<5 => 1\n5.1f<=5 => 0\n5.0f<=5 => 1\n4.9f<=5 => 1\nOK\n"
status: 0
